tests/toy/neg/000554_mutation.toylang
program a = { a = a + int a; } .
